Fix a11y of hljs token in dark mode

--- a/docs/_asset/index.css
+++ b/docs/_asset/index.css
@@ -1102,7 +1102,7 @@ button.success {
   }
 
   .hljs-section {
-    color: hsl(216deg 84% 55%) !important;
+    color: #488bef !important;
   }
 
   .hljs-built_in,
